terraform/shared/cross-cloud-https.tf
locals {
  google_cloud_internal_lb_cidrs = [
    for k in sort(keys(local.google_cloud_regions)) :
    "${data.google_compute_address.google_cloud_internal_lb[k].address}/32"
  ]
}

resource "aws_security_group_rule" "apne1_nginx_egress_google_cloud_internal_lb" {
  # checkov:skip=CKV_BUNSHIN_1:Resource does not support tags
  provider = aws.apne1

  type              = "egress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = local.google_cloud_internal_lb_cidrs
  security_group_id = data.terraform_remote_state.aws.outputs.apne1_nginx_security_group_id
  description       = "HTTPS to Google Cloud internal LB across HA VPN"
}

resource "aws_security_group_rule" "apne3_nginx_egress_google_cloud_internal_lb" {
  # checkov:skip=CKV_BUNSHIN_1:Resource does not support tags
  provider = aws.apne3

  type              = "egress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = local.google_cloud_internal_lb_cidrs
  security_group_id = data.terraform_remote_state.aws.outputs.apne3_nginx_security_group_id
  description       = "HTTPS to Google Cloud internal LB across HA VPN"
}

# GKE Autopilot は ip-masq-agent の default で RFC1918 宛の Pod source IP を保持する
resource "aws_security_group_rule" "apne1_internal_alb_ingress_google_cloud_nginx" {
  # checkov:skip=CKV_BUNSHIN_1:Resource does not support tags
  provider = aws.apne1

  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = local.google_cloud_pod_secondary_cidrs
  security_group_id = data.terraform_remote_state.aws.outputs.apne1_internal_alb_security_group_id
  description       = "HTTPS from Google Cloud nginx Pod across HA VPN"
}

resource "aws_security_group_rule" "apne3_internal_alb_ingress_google_cloud_nginx" {
  # checkov:skip=CKV_BUNSHIN_1:Resource does not support tags
  provider = aws.apne3

  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = local.google_cloud_pod_secondary_cidrs
  security_group_id = data.terraform_remote_state.aws.outputs.apne3_internal_alb_security_group_id
  description       = "HTTPS from Google Cloud nginx Pod across HA VPN"
}
